examples/test/testpolicy13749.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13749
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key30: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value45
          key23: value43
          key44: value39
      podSelector:
        matchLabels:
          key43: value15
          key34: value32
          key30: value7
